--- a/mini_project/templates/base.html
+++ b/mini_project/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <title>{% block title %}My Project{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <script src="{% static 'js/script.js' %}"></script>
     <script src="{% static 'js/popup.js' %}"></script>
     <link
@@ -16,7 +17,7 @@
     <header>
       <nav>
         <div class="nav-left">
-          <a href="{% url 'store' %}">
+          <a href="{% url 'home' %}">
             <img
               src="{% static 'users/logo.png' %}"
               alt="Logo Checkoutin"
@@ -27,18 +28,17 @@
 
         <div class="nav-center">
           {% if user.is_authenticated %}
+          <a href="{% url 'home' %}" >Home</a>
           <div class="dropdown">
-  <a href="{% url 'store' %}" class="dropbtn">Store</a>
-  <div class="dropdown-content">
-    <a href="{% url 'blocksilinder' %}">Block silinder</a>
-    <a href="{% url 'headsilinder' %}">Head silinder</a>
-    <a href="{% url 'krukas' %}">Kruk As</a>
-    <a href="{% url 'karbu' %}">Karbu/Throtle body</a>
-    <a href="{% url 'lampu' %}">Lampu</a>
-    <a href="{% url 'velg' %}">Velg</a>
-  </div>
-</div>
-
+            <a href="{% url 'store' %}" class="dropbtn">Store</a>
+            <div class="dropdown-content">
+              <a href="{% url 'blocksilinder' %}">Block silinder</a>
+              <a href="{% url 'headsilinder' %}">Head silinder</a>
+              <a href="{% url 'krukas' %}">Kruk As</a>
+              <a href="{% url 'karbu' %}">Karbu/Throtle body</a>
+              <a href="{% url 'lampu' %}">Lampu</a>
+              <a href="{% url 'velg' %}">Velg</a>
+            </div>
           </div>
           <a href="{% url 'my_orders' %}">Pesanan Saya</a>
           {% endif %}
@@ -62,23 +62,31 @@
         <li>{{ message }}</li>
         {% endfor %}
       </ul>
-      {% endif %}
-      {% block content %}{% endblock %}
+      {% endif %} {% block content %}{% endblock %}
     </main>
 
     <footer class="site-footer">
       <div class="footer-inner">
-         <img
-              src="{% static 'users/logo.png' %}"
-              alt="Logo Checkoutin"
-              class="logo-img"
-            />
+        <img
+          src="{% static 'users/logo.png' %}"
+          alt="Logo Checkoutin"
+          class="logo-img"
+        />
         <nav class="footer-nav" aria-label="Footer">
           <a href="/about">About</a>
           <a href="/terms">Terms</a>
           <a href="/privacy">Privacy</a>
           <a href="/contact">Contact</a>
         </nav>
+
+        <!-- Social Icons -->
+        <div class="footer-socials">
+          <a href="#"><i class="bx bxl-facebook"></i></a>
+          <a href="#"><i class="bx bxl-instagram"></i></a>
+          <a href="#"><i class="bx bxl-twitter"></i></a>
+          <a href="#"><i class="bx bxl-youtube"></i></a>
+        </div>
+
         <div class="copyright">&copy; <span id="year-2"></span> Motopartz</div>
       </div>
     </footer>
