--- a/mini_project/templates/base.html
+++ b/mini_project/templates/base.html
@@ -37,6 +37,7 @@
               <a href="{% url 'krukas' %}">Kruk As</a>
               <a href="{% url 'karbu' %}">Karbu/Throtle body</a>
               <a href="{% url 'lampu' %}">Lampu</a>
+              <a href="{% url 'shock' %}">Shock Breaker</a>
               <a href="{% url 'velg' %}">Velg</a>
             </div>
           </div>
